--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="code-img" src="\images\coder.png" alt=""width="150px" height="150px">
+          <img class="code-img" src="images/coder.png" alt=""width="150px" height="150px">
           <h3>Technology I Know</h3>
           <p>
             I  have good knowlegdge of launguge of c,c++,python,javascript and kotlin
@@ -40,16 +40,16 @@
         <hr>
         <div class="skill-row">
           <h2>Hobbies</h2>
-          <img class="game-img" src="\images\giphy (2).gif" alt="">
+          <img class="game-img" src="images/giphy (2).gif" alt="">
           <p>I love to play Outdoor Games especially Soccer,Vollyball and Cricket</p>
-          <img class="book-img" src="\images\giphy (1).gif" alt="">
+          <img class="book-img" src="images/giphy (1).gif" alt="">
           <p>I Like reading books & watching movies</p>
         </div>
       </div>
       <hr>
       <div class="goals-of life">
         <h2>Goals of my life</h2>
-        <img class="" src="\images\giphy.gif" alt="">
+        <img class="" src="images/giphy.gif" alt="">
 
         <p>My Aim is make setup a startup which is best in world.I don't want to seek job.My plan is to create empolyment. </p>
 
