Website link replaced with Github

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link"href="https://www.facebook.com/aman.dubey.7374480/">FACEBOOK</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://github.com/ShivanandDubeyji01">Github</a>
       <p class= "copyright">© 2021 Shivanand Dubey.</p>
     </div>
 
